Tring to fix background on ios

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,9 +1,16 @@
 html {
+  min-height: 100%;
+  max-height: 100%;
+  width: 100%;
 }
 
 body
 {
   background: url('../images/BW Mountain.png') no-repeat center center fixed;
+  min-height: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100vh;
   background-size: cover;
   background-attachment: fixed;
   z-index: -3;
